@@ -1,3 +1,6 @@
 usr/bin
 usr/share/emacs/site-lisp/notmuch
+usr/share/vim/registry
+usr/share/vim/addons/plugin
+usr/share/vim/addons/syntax
 etc/bash_completion.d
